--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                 <h1>FrontLine</h1>
                 <p>Découvrez le serveur milsim le plus réaliste</p>
                 <div class="cta-buttons">
-                    <a href="fivem://connect/178.208.177.190" class="cta-button primary">Jouer Maintenant</a>
+                    <a href="fivem://connect/cfx.re/join/ygbq4k" class="cta-button primary">Jouer Maintenant</a>
                 </div>
             </div>
             <div class="stats-container">
@@ -349,3 +349,4 @@
 </body>
 
 </html> 
+
