Revise imprint details and contact information
Updated project contributors and contact information.

--- a/imprint.html
+++ b/imprint.html
@@ -136,9 +136,10 @@
 
         <div class="imprint-section">
             <h2><i class="fas fa-user-tie"></i> Personne présent dans le projet</h2>
-            <p>Créateur : Thib<br>
-            Co Créateur : Faucon<br>
-            Co Créateur : Brian<br>
+            <p>Créateur : Scofield<br>
+            Co Créateur : WAWAZ<br>
+            Co Créateur : Skaysioo<br>
+            Créateur du site : Tom<br>
             </p>
         </div>
 
@@ -217,3 +218,4 @@
 </body>
 
 </html> 
+
